dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/App.cpp)

dnl sets build, host, target variables and the same with _alias
AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE(FreeMat, 1.0)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_F77
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_RANLIB
AC_F77_LIBRARY_LDFLAGS
case $host in
*-*-linux-* | *-*-cygwin*)
  FLIBS=`echo $FLIBS | sed -e 's/-lfrtbegin//g'` ;;
esac

AC_ARG_ENABLE(postscript,
	[--enable-postscript	 enable postscript output (needed on Windows)])

AC_ARG_WITH(profile,
	[AC_HELP_STRING([--with-profile],
		[Include profiling options [default=no]])],
		prof_flag="-pg",
		prof_flag="")

AC_ARG_WITH(debug,
	[AC_HELP_STRING([--with-debug],
		[Include debug options [default=no]])],
		debug_flag="-g",
		debug_flag="-O3")

AC_ARG_WITH(miniblas,
	[AC_HELP_STRING([--with-miniblas],
		[Force use of built-in BLAS library [default=no]])],
		forceminiblas="yes",
		forceminiblas="no")

AC_ARG_WITH(minilapack,
	[AC_HELP_STRING([--with-minilapack],
		[Force use of built-in LAPACK library [default=no]])],
		forceminilapack="yes",
		forceminilapack="no")

MP_WITH_CURSES([],[])

case $host in
*-*-cygwin*)
  CURSES_LIB=""
esac

LIBS="$debug_flag $prof_flag $LIBS"
CXXFLAGS="$debug_flag $prof_flag $CXXFLAGS"
YFLAGS="$YFLAGS -d"
LFLAGS="$LFLAGS"

AC_SUBST(YFLAGS)
AC_SUBST(LFLAGS)

#ACX_LAPACK([] , AC_MSG_ERROR([Could not find LAPACK+BLAS.  See installation instructions for more information...]) )

if test "$forceminiblas" = "yes" ; then
  BLAS_LIBS="-L\${top_builddir}/libs/libMiniBLAS -lMiniBLAS"
  miniblasdir="libMiniBLAS"
fi

if test "$forceminilapack" = "yes" ; then
  LAPACK_LIBS="-L\${top_builddir}/libs/libMiniLAPACK -lMiniLAPACK"
  minilapackdir="libMiniLAPACK"
fi

AC_SUBST(minilapackdir)
AC_SUBST(miniblasdir)

if test "$forceminiblas" = "yes" ; then
   AC_OUTPUT(libs/libMiniBLAS/Makefile)
else
   ACX_BLAS([], AC_MSG_ERROR([Could not find BLAS. Try using --with-blas or --with-miniblas.]))
fi

if test "$forceminilapack" = "yes" ; then
   AC_OUTPUT(libs/libMiniLAPACK/Makefile)
else
   ACX_LAPACK([], AC_MSG_ERROR([Could not find LAPACK. Try using --with-lapack or --with-lapack.]))
fi

LIBS="$LAPACK_LIBS $BLAS_LIBS $LIBS $FLIBS $CURSES_LIB"

ac_configure_args="--enable-debug --enable-postscript --with-libpng --with-libjpeg --with-libtiff --disable-shared $ac_configure_args"
AC_CONFIG_SUBDIRS(extlibs/libtecla)
AC_CONFIG_SUBDIRS(extlibs/libffi-2.00-beta)
AC_CONFIG_SUBDIRS(extlibs/volpack-1.0c2)
AC_CONFIG_SUBDIRS(extlibs/wxWindows)

dnl cd extlibs/wxWindows-2.4.0
dnl $SHELL configure --enable-postscript --with-opengl --with-libpng --with-libjpeg --with-libtiff --disable-shared --enable-debug
dnl cd ../..

AC_OUTPUT(Makefile src/Makefile doc/Doxyfile manual/Doxyfile libs/Makefile extlibs/Makefile libs/libFFTPack/Makefile libs/libFreeMat/Makefile libs/libCore/Makefile libs/libGraphics/Makefile)

echo \
"------------------------------------------------------------------------
Configuration:

  Source code location:       ${srcdir}
  C Compiler:	              ${CC}
  C Compiler flags:           ${CFLAGS}
  C++ Compiler:		      ${CXX}
  C++ Compiler flags:         ${CXXFLAGS}
  Host System Type:           ${host}
  Install path:		      ${prefix}
  Libs:			      ${LIBS}
  Force Mini-LAPACK:	      ${forceminilapack}
  Force Mini-BLAS:	      ${forceminiblas}

------------------------------------------------------------------------"

